%%{init: {'theme': 'default'}}%%

erDiagram
    profiles ||--o{ reviews : writes
    profiles ||--o{ user_roles : has
    profiles ||--o{ submissions : submits
    profiles ||--o{ receipts : uploads
    profiles ||--o{ stamps : collects
    
    restaurants ||--o{ reviews : has
    restaurants ||--o{ receipts : verifies
    restaurants ||--o{ stamps : gives

    profiles {
        uuid user_id PK
        string nickname UK
        string email
        timestamp created_at
    }
    
    restaurants {
        uuid id PK
        string unique_id UK
        string name
        string address
        string address_detail
        float lat
        float lng
        string category
        string contact
        string hours
        array menu
        string youtube_title
        string youtube_url
        string thumbnail_url
        string video_published_at
        string status
        boolean is_not_selection
        jsonb evaluation_result
        string youtuber_name
        timestamp created_at
    }
    
    submissions {
        uuid id PK
        uuid user_id FK
        string restaurant_name
        string youtube_url
        string address
        string status
        string reject_reason
        timestamp created_at
    }
    
    receipts {
        uuid id PK
        uuid user_id FK
        uuid restaurant_id FK
        string receipt_image_url
        string status
        timestamp visit_date
        jsonb ocr_result
        jsonb duplicate_check_result
        timestamp created_at
    }
    
    stamps {
        uuid id PK
        uuid user_id FK
        uuid restaurant_id FK
        uuid receipt_id FK
        timestamp created_at
    }
    
    reviews {
        uuid id PK
        uuid user_id FK
        uuid restaurant_id FK
        text content
        int rating
        timestamp created_at
    }
    
    user_roles {
        uuid id PK
        uuid user_id FK
        string role
    }
